# life_recorder

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
life_recorder/: add.py  check.py  create.py  delete.py  factory.py  helper.py  life_recorder.py  read.py  update.py
life_recorder/factory/: base.py  create.py  delete.py  factory.py  read.py  search.py  update.py
src/life_recorder/: __init__.py  app.py  base.py  check.py  cli.py  config.py  helper.py
src/life_recorder/factory/: base.py  create.py  delete.py  factory.py  read.py  update.py
src/life_recorder/styles/: app.tcss
tests/: test_base.py  test_factory.py  test_helper.py
tests/fixtures/: db.json  empty_db.json
