[project]
name = "life-recorder"
version = "0.3.0"
description = "A simple CLI tool for recording life events"
readme = "README.md"
authors = [
    { name = "Javid Khasizada", email = "willow.tiger8627@eagereverest.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop - Regular computer users",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "loguru>=0.7.3",
    "click (>=8.2.1,<9.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "textual (>=5.3.0,<6.0.0)",
]

[tool.poetry]
packages = [{ include = "life_recorder", from = "src" }]
include = [{ path = "life_recorder/*.tcss", format = ["sdist", "wheel"] }]
exclude = ["tests", "tests/**"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
textual-dev = "^1.7.0"

[project.scripts]
life_recorder = "life_recorder.cli:main"
life_recorder-app = "life_recorder.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
